--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
         <div class="product-list">
           <div class="product-box">
-            <img src="assets/images/product1.jpg" alt="Product 1" />
+            <img src="assets/images/chilli.jpg" alt="Product 1" />
             <div class="product-info">
               <h3 class="product-name">Chilli Powder</h3>
               <p class="product-price">₹120</p>
@@ -73,7 +73,7 @@
           </div>
 
           <div class="product-box">
-            <img src="assets/images/product2.jpg" alt="Product 2" />
+            <img src="assets/images/turmeric.jpg" alt="Product 2" />
             <div class="product-info">
               <h3 class="product-name">Turmeric Powder</h3>
               <p class="product-price">₹90</p>
@@ -81,7 +81,7 @@
           </div>
 
           <div class="product-box">
-            <img src="assets/images/product3.jpg" alt="Product 3" />
+            <img src="assets/images/corriander.jpg" alt="Product 3" />
             <div class="product-info">
               <h3 class="product-name">Coriander Powder</h3>
               <p class="product-price">₹110</p>
@@ -89,7 +89,7 @@
           </div>
 
           <div class="product-box">
-            <img src="assets/images/image4.jpg" alt="Product 4" />
+            <img src="assets/images/garam.jpg" alt="Product 4" />
             <div class="product-info">
               <h3 class="product-name">Garam Masala</h3>
               <p class="product-price">₹150</p>
