--- a/index.html
+++ b/index.html
@@ -62,37 +62,38 @@
           <h2 class="product-header-text">Our Products</h2>
           <button class="btn-products" id="btn-products">View all</button>
         </div>
-
-        <div class="product-list">
-          <div class="product-box">
-            <img src="assets/images/chilli.jpg" alt="Product 1" />
-            <div class="product-info">
-              <h3 class="product-name">Chilli Powder</h3>
-              <p class="product-price">₹120</p>
+        <div class="products-wrapper">
+          <div class="product-list">
+            <div class="product-box">
+              <img src="assets/images/chilli.jpg" alt="Product 1" />
+              <div class="product-info">
+                <h3 class="product-name">Chilli Powder</h3>
+                <p class="product-price">₹120</p>
+              </div>
             </div>
-          </div>
 
-          <div class="product-box">
-            <img src="assets/images/turmeric.jpg" alt="Product 2" />
-            <div class="product-info">
-              <h3 class="product-name">Turmeric Powder</h3>
-              <p class="product-price">₹90</p>
+            <div class="product-box">
+              <img src="assets/images/turmeric.jpg" alt="Product 2" />
+              <div class="product-info">
+                <h3 class="product-name">Turmeric Powder</h3>
+                <p class="product-price">₹90</p>
+              </div>
             </div>
-          </div>
 
-          <div class="product-box">
-            <img src="assets/images/corriander.jpg" alt="Product 3" />
-            <div class="product-info">
-              <h3 class="product-name">Coriander Powder</h3>
-              <p class="product-price">₹110</p>
+            <div class="product-box">
+              <img src="assets/images/corriander.jpg" alt="Product 3" />
+              <div class="product-info">
+                <h3 class="product-name">Coriander Powder</h3>
+                <p class="product-price">₹110</p>
+              </div>
             </div>
-          </div>
 
-          <div class="product-box">
-            <img src="assets/images/garam.jpg" alt="Product 4" />
-            <div class="product-info">
-              <h3 class="product-name">Garam Masala</h3>
-              <p class="product-price">₹150</p>
+            <div class="product-box">
+              <img src="assets/images/garam.jpg" alt="Product 4" />
+              <div class="product-info">
+                <h3 class="product-name">Garam Masala</h3>
+                <p class="product-price">₹150</p>
+              </div>
             </div>
           </div>
         </div>
