added contact icons

--- a/index.html
+++ b/index.html
@@ -10,8 +10,26 @@
   </head>
   <body>
     <div class="announcement">
-      <p class="announcement-text">Announcement</p>
+      <div class="announcement-content">
+        <p class="announcement-text">Contact us:</p>
+        <div class="announcement-icons">
+          <a href="tel:+917676959215" aria-label="Call us">
+            <img src="assets/icons/phone.svg" alt="Phone" />
+          </a>
+          <a href="mailto:info@masalacompany.com" aria-label="Email us">
+            <img src="assets/icons/mail.svg" alt="Email" />
+          </a>
+          <a
+            href="https://wa.me/917676959215"
+            target="_blank"
+            aria-label="Chat on WhatsApp"
+          >
+            <img src="assets/icons/message-circle.svg" alt="WhatsApp" />
+          </a>
+        </div>
+      </div>
     </div>
+
     <div class="container">
       <section class="header">
         <div class="site-logo">
