--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <section class="header">
         <div class="site-logo">
           <a href="#">
-            <img src="assets/images/chilli_logo.jpg" alt="Site Logo" />
+            <img src="assets/images/chilli-logo.svg" alt="Site Logo" />
           </a>
           <h1 class="site-header">Masala products</h1>
         </div>
@@ -48,7 +48,7 @@
         <nav class="navigation" id="nav-menu">
           <a href="#" id="btn-home">Home</a>
           <a href="#" id="btn-products">Products</a>
-          <a href="#" id="btn-gallery">Gallery</a>
+          <a href="#" id="btn-gallery">About Us</a>
           <a href="#" id="btn-receipes">Recipes</a>
           <a href="#" id="btn-contact">Contact</a>
         </nav>
@@ -116,8 +116,23 @@
           </div>
         </div>
       </section>
+      <section class="about">
+        <div class="about-content">
+          <h2 class="about-title">About Us</h2>
+          <p class="about-text">
+            At <strong>Masala Company</strong>, we bring you the authentic taste
+            of India with our carefully blended spices. Our goal is to preserve
+            traditional flavors while maintaining modern quality standards.
+            Every product is crafted with passion and purity to make your food
+            more flavorful and aromatic.
+          </p>
+          <a href="#" class="btn-about">Learn More</a>
+        </div>  
 
-      <section class="gallery"></section>
+        <div class="about-image">
+          <img src="assets/images/about-us.jpg" alt="About our company" />
+        </div>
+      </section>
       <section class="reciepes"></section>
       <section class="contact"></section>
       <section class="footer"></section>
