--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Company description..." />
-    <title>Company Name</title>
+    <title>Masala Company</title>
     <link rel="stylesheet" href="assets/css/style.css" />
     <script src="assets/js/main.js" defer></script>
   </head>
   <body>
+    <!-- Announcement -->
     <div class="announcement">
       <div class="announcement-content">
         <p class="announcement-text">Contact us:</p>
@@ -31,12 +32,13 @@
     </div>
 
     <div class="container">
+      <!-- Header -->
       <section class="header">
         <div class="site-logo">
-          <a href="#">
-            <img src="assets/images/chilli-logo.svg" alt="Site Logo" />
-          </a>
-          <h1 class="site-header">Masala products</h1>
+          <a href="#"
+            ><img src="assets/images/chilli-logo.svg" alt="Site Logo"
+          /></a>
+          <h1 class="site-header">Masala Products</h1>
         </div>
 
         <div class="hamburger" id="hamburger">
@@ -46,14 +48,15 @@
         </div>
 
         <nav class="navigation" id="nav-menu">
-          <a href="#" id="btn-home">Home</a>
-          <a href="#" id="btn-products">Products</a>
-          <a href="#" id="btn-gallery">About Us</a>
-          <a href="#" id="btn-receipes">Recipes</a>
-          <a href="#" id="btn-contact">Contact</a>
+          <a href="#">Home</a>
+          <a href="#">Products</a>
+          <a href="#">About Us</a>
+          <a href="#">Recipes</a>
+          <a href="#">Contact</a>
         </nav>
       </section>
 
+      <!-- Hero -->
       <section class="hero">
         <div class="hero-slider">
           <div class="slide active">
@@ -75,39 +78,38 @@
         </div>
       </section>
 
+      <!-- Products -->
       <section class="products">
         <div class="products-header">
-          <h2 class="product-header-text">Our Products</h2>
-          <button class="btn-products" id="btn-products">View all</button>
+          <h2 class="section-header">Our Products</h2>
+          <a href="#" class="btn btn-primary">View All</a>
         </div>
+
         <div class="products-wrapper">
           <div class="product-list">
             <div class="product-box">
-              <img src="assets/images/chilli.jpg" alt="Product 1" />
+              <img src="assets/images/chilli.jpg" alt="Chilli Powder" />
               <div class="product-info">
                 <h3 class="product-name">Chilli Powder</h3>
                 <p class="product-price">₹120</p>
               </div>
             </div>
-
             <div class="product-box">
-              <img src="assets/images/turmeric.jpg" alt="Product 2" />
+              <img src="assets/images/turmeric.jpg" alt="Turmeric Powder" />
               <div class="product-info">
                 <h3 class="product-name">Turmeric Powder</h3>
                 <p class="product-price">₹90</p>
               </div>
             </div>
-
             <div class="product-box">
-              <img src="assets/images/corriander.jpg" alt="Product 3" />
+              <img src="assets/images/corriander.jpg" alt="Coriander Powder" />
               <div class="product-info">
                 <h3 class="product-name">Coriander Powder</h3>
                 <p class="product-price">₹110</p>
               </div>
             </div>
-
             <div class="product-box">
-              <img src="assets/images/garam.jpg" alt="Product 4" />
+              <img src="assets/images/garam.jpg" alt="Garam Masala" />
               <div class="product-info">
                 <h3 class="product-name">Garam Masala</h3>
                 <p class="product-price">₹150</p>
@@ -116,9 +118,11 @@
           </div>
         </div>
       </section>
+
+      <!-- About Us -->
       <section class="about">
         <div class="about-content">
-          <h2 class="about-title">About Us</h2>
+          <h2 class="section-header about-title">About Us</h2>
           <p class="about-text">
             At <strong>Masala Company</strong>, we bring you the authentic taste
             of India with our carefully blended spices. Our goal is to preserve
@@ -126,14 +130,15 @@
             Every product is crafted with passion and purity to make your food
             more flavorful and aromatic.
           </p>
-          <a href="#" class="btn-about">Learn More</a>
-        </div>  
-
+          <a href="#" class="btn btn-primary btn-about">Learn More</a>
+        </div>
         <div class="about-image">
           <img src="assets/images/about-us.jpg" alt="About our company" />
         </div>
       </section>
-      <section class="reciepes"></section>
+
+      <!-- Empty sections for now -->
+      <section class="recipes"></section>
       <section class="contact"></section>
       <section class="footer"></section>
     </div>
