added footer card

--- a/index.html
+++ b/index.html
@@ -140,7 +140,92 @@
       <!-- Empty sections for now -->
       <section class="recipes"></section>
       <section class="contact"></section>
-      <section class="footer"></section>
+      <footer class="footer">
+        <div class="footer-content">
+          <!-- Company Info -->
+          <div class="company-info footer-info">
+            <div class="site-logo">
+              <a href="#">
+                <img
+                  src="assets/images/chilli-logo.svg"
+                  alt="Masala Company Logo"
+                />
+              </a>
+            </div>
+            <p class="footer-info-text">
+              At <strong>Masala Company</strong>, we bring you the authentic
+              taste of India with our carefully blended spices.
+            </p>
+            <div class="footer-social-icons">
+              <a
+                href="https://www.instagram.com/cherryvihaan/"
+                target="_blank"
+                aria-label="Follow us on Instagram"
+              >
+                <img src="assets/icons/instagram.svg" alt="Instagram" />
+              </a>
+              <a
+                href="https://www.facebook.com/"
+                target="_blank"
+                aria-label="Follow us on Facebook"
+              >
+                <img src="assets/icons/facebook.svg" alt="Facebook" />
+              </a>
+              <a
+                href="https://www.youtube.com/@VihaanCherry"
+                target="_blank"
+                aria-label="Follow us on YouTube"
+              >
+                <img src="assets/icons/youtube.svg" alt="YouTube" />
+              </a>
+            </div>
+          </div>
+
+          <!-- Site Links -->
+          <nav class="site-links footer-info" aria-label="Quick Links">
+            <button class="footer-toggle">Quick Links</button>
+            <div class="footer-links">
+              <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Products</a></li>
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">Recipes</a></li>
+                <li><a href="#">Contact</a></li>
+              </ul>
+            </div>
+          </nav>
+
+          <!-- Contact Info -->
+          <div class="company-address footer-info">
+            <button class="footer-toggle">Contact Us</button>
+            <div class="company-address-content">
+              <address>
+                <p>Masala Company</p>
+                <p>Address Line 1,</p>
+                <p>Address Line 2</p>
+                <div class="footer-contact-icons">
+                  <a href="tel:+1767659215" aria-label="Call us">
+                    <img src="assets/icons/phone.svg" alt="Phone" />
+                  </a>
+                  <a
+                    href="https://wa.me/917676959215"
+                    target="_blank"
+                    aria-label="Chat with us on WhatsApp"
+                  >
+                    <img src="assets/icons/message-circle.svg" alt="WhatsApp" />
+                  </a>
+                  <a href="mailto:info@masalacompany.com" aria-label="Email us">
+                    <img src="assets/icons/mail.svg" alt="Email" />
+                  </a>
+                </div>
+              </address>
+            </div>
+          </div>
+        </div>
+      </footer>
     </div>
+    <button id="scrollToTop" aria-label="Scroll to top">
+      <img src="assets/icons/arrow-up.svg" alt="" />
+    </button>
   </body>
 </html>
