footer minor bug fix

--- a/index.html
+++ b/index.html
@@ -183,7 +183,8 @@
 
           <!-- Site Links -->
           <nav class="site-links footer-info" aria-label="Quick Links">
-            <button class="footer-toggle">Quick Links</button>
+            <h3 class="footer-header">Quick Links</h3>
+            <button class="footer-toggle">Quick Links</button>            
             <div class="footer-links">
               <ul>
                 <li><a href="#">Home</a></li>
@@ -197,7 +198,8 @@
 
           <!-- Contact Info -->
           <div class="company-address footer-info">
-            <button class="footer-toggle">Contact Us</button>
+            <h3 class="footer-header">Contact Us</h3>
+            <button class="footer-toggle">Contact Us</button>            
             <div class="company-address-content">
               <address>
                 <p>Masala Company</p>
