added css for announcement

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <!-- Announcement -->
-    <div class="announcement">
+    <div class="announcement default">
       <div class="announcement-content">
         <p class="announcement-text">Contact us:</p>
         <div class="announcement-icons">
