addd some meta info

--- a/index.html
+++ b/index.html
@@ -1,11 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>
+      >Masala Company | Authentic Indian Spices and Ready Mix Powders
+    </title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Company description..." />
-    <title>Masala Company</title>
-    <link rel="shortcut icon" href="assets/icons/favicon.ico" type="image/x-icon">
+
+    <!-- ✅ Basic SEO -->
+    <meta
+      name="description"
+      content="Harihar's best sellig masala powders are now available all over Karnataka. Harihara Masla is authentic
+     organic product used in homes and hotels and is famous for natural aromatic masala powders."
+    />
+    <meta
+      name="keywords"
+      content="Hrihar masala, natural aromatic masala powder,best sellig masala powder, 
+    Indian spices, masala powders, spice blends, ready mix masala, authentic Indian taste"
+    />
+
+    <!-- ✅ Open Graph for social sharing -->
+    <meta
+      property="og:title"
+      content="Masala Company | Authentic Indian Spices"
+    />
+    <meta
+      property="og:description"
+      content="Taste the essence of Harihar's best sellig masala powders."
+    />
+    <meta property="og:image" content="assets/images/chilli-logo.svg" />
+    <meta property="og:url" content="https://yourdomain.com/" />
+    <meta property="og:type" content="website" />
+
+    <meta http-equiv="Cache-Control" content="max-age=31536000, must-revalidate">
+    <link
+      rel="shortcut icon"
+      href="assets/icons/favicon.ico"
+      type="image/x-icon"
+    />
     <link rel="stylesheet" href="assets/css/style.css" />
     <script src="assets/js/main.js" defer></script>
   </head>
@@ -185,7 +217,7 @@
           <!-- Site Links -->
           <nav class="site-links footer-info" aria-label="Quick Links">
             <h3 class="footer-header">Quick Links</h3>
-            <button class="footer-toggle">Quick Links</button>            
+            <button class="footer-toggle">Quick Links</button>
             <div class="footer-links">
               <ul>
                 <li><a href="#">Home</a></li>
@@ -200,7 +232,7 @@
           <!-- Contact Info -->
           <div class="company-address footer-info">
             <h3 class="footer-header">Contact Us</h3>
-            <button class="footer-toggle">Contact Us</button>            
+            <button class="footer-toggle">Contact Us</button>
             <div class="company-address-content">
               <address>
                 <p>Masala Company</p>
