commented cache meta

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <meta property="og:url" content="https://yourdomain.com/" />
     <meta property="og:type" content="website" />
 
-    <meta http-equiv="Cache-Control" content="max-age=31536000, must-revalidate">
+    <!-- <meta http-equiv="Cache-Control" content="max-age=31536000, must-revalidate"> -->
     <link
       rel="shortcut icon"
       href="assets/icons/favicon.ico"
