fixed hamberger not showing issue

--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <title>
-      >Masala Company | Authentic Indian Spices and Ready Mix Powders
+      Masala Company | Authentic Indian Spices and Ready Mix Powders
     </title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- ✅ Basic SEO -->
+    <!-- Basic SEO -->
     <meta
       name="description"
       content="Harihar's best sellig masala powders are now available all over Karnataka. Harihara Masla is authentic
@@ -19,7 +19,7 @@
     Indian spices, masala powders, spice blends, ready mix masala, authentic Indian taste"
     />
 
-    <!-- ✅ Open Graph for social sharing -->
+    <!-- Open Graph for social sharing -->
     <meta
       property="og:title"
       content="Masala Company | Authentic Indian Spices"
