changed hero banner

--- a/index.html
+++ b/index.html
@@ -93,13 +93,22 @@
       <section class="hero">
         <div class="hero-slider">
           <div class="slide active">
-            <img src="assets/images/product1.jpg" alt="Masala Image 1" />
+            <picture>
+              <source  srcset="assets/images/product1-mb.webp" media="(max-width:768px)"/>
+              <img src="assets/images/product1.webp" alt="Masala Image 1"/>
+            </picture>
           </div>
           <div class="slide">
-            <img src="assets/images/product2.jpg" alt="Masala Image 2" />
+            <picture>
+              <source  srcset="assets/images/product2-mb.webp" media="(max-width:768px)"/>
+              <img src="assets/images/product2.webp" alt="Masala Image 2"/>
+            </picture>
           </div>
           <div class="slide">
-            <img src="assets/images/product3.jpg" alt="Masala Image 3" />
+            <picture>
+              <source  srcset="assets/images/product3-mb.webp" media="(max-width:768px)"/>
+              <img src="assets/images/product3.webp" alt="Masala Image 13"/>
+            </picture>
           </div>
         </div>
         <button class="prev">&#10094;</button>
