--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
           <div class="slide active">
             <picture>
               <source  srcset="assets/images/product1-mb.webp" media="(max-width:768px)"/>
-              <img src="assets/images/product1.webp" alt="Masala Image 1"/>
+              <img src="assets/images/product1.1.webp" alt="Masala Image 1"/>
             </picture>
           </div>
           <div class="slide">
@@ -175,7 +175,7 @@
           <a href="#" class="btn btn-primary btn-about">Learn More</a>
         </div>
         <div class="about-image">
-          <img src="assets/images/about-us.jpg" alt="About our company" />
+          <img src="assets/images/about-us.webp" alt="About our company" />
         </div>
       </section>
 
